# rust-axum-crud-template

./: .env  Cargo.toml
migrations/: 20230330233623_create_todos.sql  20230330233830_create_users.sql  20230330234404_seeding_todos.sql  20230330234821_seeding_users.sql
src/: main.rs  routes.rs
src/handlers/: home.rs  users.rs
src/models/: users.rs
