[package]
name = "ax"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.12"
cargo-watch = "8.4.0"
chrono = "0.4.24"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.6.3", features = ["postgres","runtime-tokio-native-tls"] }
sqlx-cli = "0.6.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.3.0"
axum-sessions = "0.5.0"
rand = "0.8.5"
axum_session = { version = "0.1.3", default-features = false, features = [ "postgres-native"] }

